23-May-2020 V0.59 Add PubChem tracking diagnostics
23-May-2020 V0.60 Adjust multiprocessing configuration
28-Jul-2020 V0.61 Added modules PubChemDataCacheProvider() PubChemIndexCacheProvider() PubChemEtlWrapper() and associated tests
28-Jul-2020 V0.62 Relax testing constraints for PubChem lookups and upversion
29-Jul-2020 V0.63 Add module PubChemEtlWorkflow() and associated tests
29-Jul-2020 V0.64 Add an automatic fallback support for stashed data sets.
29-Jul-2020 V0.65 Add stash() method to module PubChemEtlWorkflow()
30-Aug-2020 V0.66 Update dependencies
 8-Dec-2020 V0.67 Add PolymerEntityExtractor() and UniProtExtractor() from rcsb.utils.seqalign, cleanup tests and fixture issues
 9-Dec-2020 V0.68 Simplify API for PolymerEntityExtractor()
18-Jan-2021 V0.69 Update dependencies
25-Feb-2021 V0.70 Update with split out rcsb.utils.dictionary
18-Mar-2021 V0.71 Adjustments in initialization  UniProtExtractor()
13-May-2021 V0.72 Add minSeqLen argument to exportProteinEntityFasta()
24-May-2021 V0.73 Add BranchedEntityExtractor() and associated tests
26-May-2021 V0.74 Add modules GlycanProvider(), GlycanUtils() and associated tests
27-May-2021 V0.75 Implement GlyGen mapping in ReferenceSequenceAnnotationProvider and ReferenceSequenceAnnotationAdapter
28-May-2021 V0.76 Fix idempotent issue in ReferenceSequenceAnnotationAdapter()
30-May-2021 V0.77 Disable Pfam annotation from SIFTS
19-Jun-2021 V0.78 Add ChemRefMappingProvider(), modernize ChemRefExtractor(), and update __docformat__
28-Jun-2021 V0.79 Add LigandNeighborMappingProvider() LigandNeighborMappingExtractor() and associated tests
30-Jun-2021 V0.80 Make GlycanProvider() a subclass of StashableBase(), add GlycanEtlWorkflow() and associated tests
30-Jun-2021 V0.81 Simplify install scripts and update pipeline configuration
26-Jul-2021 V0.82 Replace all explicit use of StashUtil with StashableBase subclasses
26-Jul-2021 V0.83 Add tree node lists for SCOP2 and ECOD