@@ -73,3 +73,4 @@
 30-Jun-2021 V0.81 Simplify install scripts and update pipeline configuration
 26-Jul-2021 V0.82 Replace all explicit use of StashUtil with StashableBase subclasses
 26-Jul-2021 V0.83 Add tree node lists for SCOP2 and ECOD
+28-Jul-2021 V0.84 Update stash options for GlycanEtlWorkflow and PubChemEtlWrapper
